--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 @import "tailwindcss";
 
 body {
-  @apply bg-gray-600 text-gray-900;
+  @apply bg-gray-800 text-gray-900;
   box-sizing: border-box;
   overflow-x: hidden;
+  font-family: 'poppins', sans-serif;
+  color: #efeeee;
 }
